Fix cut off content in selected story

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -214,7 +214,7 @@ body[animated="true"] #menu .btn:active {
 }
 
 #selected_container {
-  overflow: hidden;
+  overflow: inherit;
   border-bottom: 1px solid var(--sep-color);
   border-top: 1px solid var(--sep-color);
 }
